# synapse-channel

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .zenodo.json  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GOVERNANCE.md  MANIFEST.in  MEMORY.md  Makefile  NOTICE.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SUPPORT.md  TEAM_PROTOCOL.md  VALIDATION.md  _typos.toml  action.yml  codecov.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  server.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/requirements/: pip-audit.txt  requirements-dev.txt  requirements-publish-smoke.txt  requirements-sbom.txt  requirements-tools.txt  requirements.txt
.github/workflows/: actions-history-audit.yml  ci.yml  clients-cockpit.yml  clients-js.yml  clients-vscode.yml  codeql.yml  commit-trailers.yml  cross-os.yml  docker.yml  docs.yml  fuzz.yml  github-app.yml  link-check.yml  mcp-registry.yml  opencode-compatibility.yml  opencode-editor-e2e.yml  opencode-integration.yml  pre-commit.yml  publish.yml  pypi-downloads.yml  release.yml  scorecard.yml  soak.yml  stale.yml  websockets-compatibility.yml
LICENSES/: LicenseRef-SYNAPSE-Commercial.txt
benchmarks/: README.md  a2a_bridge_benchmark.py  coding_fleet_benchmark.py  relay_token_benchmark.py  routing_benchmark.py  scalability_benchmark.py  sustained_write_benchmark.py
benchmarks/results/: a2a_bridge_benchmark.json  coding_fleet_benchmark.json  relay_token_benchmark.json  routing_benchmark.json  scalability_benchmark.json  sustained_write_benchmark.json
benchmarks/traces/: routing_prompts.json  sample_session.json
clients/cockpit/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
clients/js/: README.md  package-lock.json  package.json  tsconfig.json
clients/vscode/: .vscodeignore  CHANGELOG.md  PRIVACY.md  README.md  SUPPORT.md  package-lock.json  package.json  tsconfig.integration.json  tsconfig.json  vitest.config.ts
deploy/: synapse-arm@.service  synapse-hub.service  synapse-presence@.service
docs/: a2a-conformance.md  a2a-deployment-threat-model.md  a2a-validation-receipts.md  agent-air-traffic-control.md  agent-trust-graph.md  api-stability.md  api.md  at-rest-encryption.md  benchmarks.md  changelog.md  claim-guard-hooks.md  cli.md  cockpit.md  commercial.md  comparison.md  coordination-model.md  coordination-spec.md  cross-agent-adapter-kits.md  deployment.md  differential-privacy-blackboard.md  end-to-end-encrypted-channels.md  examples.md  faq.md  federated-trust-model.md  git-claims.md  glossary.md  go-client.md  identity-and-acl.md  index.md  installation.md  integration-demos.md  js-client.md  managed-github-app.md  mcp.md  migration-1.0.md  multi-hub-sync.md  observability.md  opencode.md  paranoid-mode.md  participant-memory.md  (+21 more)
docs/_generated/: capability_manifest.json
docs/assets/: generate_header.py  record_demo.sh
docs/readme/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt-BR.md  README.sk.md  README.zh-CN.md
downloads/: synapse-channel.csv
examples/: README.md  coding_agents_demo.py  coordination_demo.py  llm_team_demo.py
examples/mcp/: .mcp.json  (+1 more)
integrations/github-app/: ARCHITECTURE.md  MANIFEST.in  NOTICE.md  README.md  pyproject.toml  requirements-dev.txt
integrations/github-app/src/synapse_github_app/: __init__.py  auth.py  checks.py  conflicts.py  errors.py  github_api.py  json_boundary.py  manifest.py  models.py  service.py  webhook.py
integrations/github-app/tests/: crypto_material.py  http_server.py  payloads.py  test_auth.py  test_checks.py  test_conflicts.py  test_github_api.py  test_json_boundary.py  test_manifest.py  test_models.py  test_service.py  test_webhook.py
notebooks/: getting-started.ipynb
tests/: _platform_caps.py  _portable_exec.py  a2a_server_helpers.py  causality_helpers.py  cli_e2e_helpers.py  cli_locking_helpers.py  cli_messaging_helpers.py  cli_processes_helpers.py  cli_processes_hub_helpers.py  cli_queries_helpers.py  client_helpers.py  conftest.py  dashboard_helpers.py  dashboard_store_feeds_helpers.py  gitclaim_helpers.py  githook_helpers.py  http_server_helpers.py  hub_e2e_helpers.py  hub_helpers.py  mcp_server_helpers.py  test_a2a.py  test_a2a_concurrency.py  test_a2a_conformance.py  test_a2a_events.py  test_a2a_http_bounds.py  test_a2a_interop_trace.py  test_a2a_load_soak.py  test_a2a_module_coverage_ratchet.py  test_a2a_real_webhook_receivers.py  test_a2a_rpc.py  test_a2a_security.py  test_a2a_server.py  test_a2a_server_correlation.py  test_a2a_server_edges.py  test_a2a_server_jsonrpc_validation.py  test_a2a_server_lifecycle.py  test_a2a_server_push.py  test_a2a_server_routes.py  test_a2a_store.py  test_a2a_store_persistence.py  (+771 more)
tools/: __init__.py  audit_dependency_tooling.py  audit_github_actions_history.py  audit_mcp_surface.py  capability_manifest.py  capability_manifest.toml  check_a2a_module_coverage.py  check_cockpit_ci.py  check_commercial_claim_hygiene.py  check_commit_trailers.py  check_dev_dependency_drift.py  check_installed_console_scripts.py  check_release_claim_hygiene.py  check_version_sync.py  check_wheel_sdist_parity.py  fuzz_protocol_decode.py  generate_commercial_certificate.py  generated_dependency_claims.py  import_merge_risk.py  mcp_registry_release.py  opencode_compatibility_contract.py  opencode_compatibility_install.py  opencode_compatibility_smoke.py  opencode_compatibility_workflow_contract.py  opencode_editor_workflow_contract.py  opencode_workflow_yaml.py  preflight.sh  pypi_downloads.py  run_mypy_hook.py  run_staged_claim_hook.py  semantic_claim_suggest.py  semantic_claims.py  semantic_diff_claims.py  test_ownership_map.py  verify_mcp_registry_release.py  websockets_compatibility_smoke.py
(+935 files in other folders)
