# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SYNAPSE_CHANNEL — project metadata, tooling, and packaging configuration

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-channel"
version = "0.17.0"
description = "Local-first multi-agent coordination bus: work claims, presence, chat, and resource sharing over a WebSocket hub"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [
  { name = "Miroslav Šotek", email = "protoscience@anulum.li" },
]
keywords = ["multi-agent", "coordination", "websocket", "task-claims", "local-first"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15.9",
  "mypy>=1.20.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
]
benchmark = [
  "tiktoken>=0.7",
]

[project.scripts]
synapse = "synapse_channel.cli:main"

[project.urls]
Homepage = "https://www.anulum.li"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "benchmarks"]
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D"]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Tests favour descriptive function names over docstrings on every case.
"tests/*" = ["D"]

[tool.mypy]
strict = true
mypy_path = "src"
files = ["src/synapse_channel", "tests", "benchmarks"]
exclude = ["legacy/"]
warn_unused_configs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["websockets.*", "tiktoken"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["synapse_channel"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 95
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
